objects/LeadAssignmentMapping__c.object
<CustomObject>
    <fields>
        <fullName>LeadField__c</fullName>
        <description>API name for the Lead field</description>
        <inlineHelpText>API name for the Lead field</inlineHelpText>
        <label>Lead Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectField__c</fullName>
        <label>SObject API Field Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>